--- a/app/Resources/static-src/app/less/page/question-bank/ai-analysis-intro-modal.less
+++ b/app/Resources/static-src/app/less/page/question-bank/ai-analysis-intro-modal.less
@@ -1,41 +1,79 @@
+.ai-analysis-intro-modal {
+  .modal-content {
+    width: 614px;
+    border-radius: 16px !important;
+    transform: translateX(-66px);
+
+    .modal-header {
+      padding: 20px;
+
+      .modal-title {
+        height: 28px;
+        line-height: 28px;
+        font-size: 20px;
+        font-weight: 500;
+        color: #37393D;
+        text-align: center;
+      }
+    }
+
+    .modal-body {
+      border-top: 1px solid #EFF0F5;
+      padding: 0;
+
+      .ai-analysis-image {
+        padding: 20px 24px;
+      }
+    }
+
+    .modal-footer {
+      padding: 24px;
+      text-align: center;
+    }
+  }
+}
 
 li::marker {
-    font-size: 20px;
-    vertical-align: middle;
-    color: #37393D;
-  }
-.ai-analysis-center {
-    margin-top: 24px;
-    .ai-analysis-text {
-        margin-bottom: 5px;
-        font-size: 14px;
+  font-size: 20px;
+  vertical-align: middle;
+  color: #37393D;
+}
 
-        b {
-            color: #37393D;
-        }
-        .li-content {
-            margin-left: -10px;
-        }
+.ai-analysis-center {
+  padding: 0 24px;
+
+  .ai-analysis-text {
+    margin-bottom: 5px;
+    font-size: 14px;
+
+    b {
+      color: #37393D;
     }
+
+    .li-content {
+      margin-left: -10px;
+    }
+  }
 }
 
 .modal-footer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.js-close-btn {
-    padding: 6px;
-    width: 226px;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 24px;
+.ai-analysis-intro-btn {
+  padding: 6px 71px;
+  width: 226px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  color: #fff;
+  border-radius: 8px;
+  border: 1px solid #46C37B;
+  background: #46C37B;
+
+  &:hover {
     color: #fff;
-    border-radius: 4px;
-    border: 1px solid #46C37B;
-    background: #46C37B;
-}
-.js-close-btn:hover{
-    color: #fff;
+  }
 }
