feat: #240605 添加ai调查问卷弹窗

--- a/app/Resources/static-src/app/less/admin-v2.less
+++ b/app/Resources/static-src/app/less/admin-v2.less
@@ -39,3 +39,5 @@
 @import 'admin-v2/page/theme.less';
 @import 'admin-v2/page/ai-analysis.less';
 @import 'admin-v2/page/reward-point-account.less';
+@import 'admin-v2/page/survey-modal.less';
+@import 'admin-v2/page/apply-modal.less';
