--- a/app/Resources/views/admin-v2/ai/survey-modal.html.twig
+++ b/app/Resources/views/admin-v2/ai/survey-modal.html.twig
@@ -3,24 +3,185 @@
 {% set modal_class = 'cd-modal-dialog ai-survey-modal' %}
 
 {% do script(['app/js/admin-v2/ai/survey/index.js']) %}
+{% block modal_header %}
+    <div class="ai-survey-header">
+      <h4 class="modal-title ai-survey-title">
+        <img src="{{ asset('static-dist/app/img/admin-v2/survey-edusoho-image.png') }}" alt="" class="ai-survey-title-image">
+         <span>全面融合AI，赋能在线教育</span>
+      </h4>
+      <button type="button" class="close ai-survey-close" data-dismiss="modal" aria-hidden="true">
+        <i class="cd-icon cd-icon-close"></i>
+      </button>         
+    </div>
+ {% endblock %}
 
-{% block title %}
-  {{ 'EduSoho全面融合AI，赋能在线教育'|trans }}
-{% endblock %}
-
-{% block body %}
-  <div>
-    <a href="{{ path('admin_v2_question_ai_analysis') }}" target="_blank" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'question_analysis'}) }}">AI题目解析</a>
-    <a href="javascript:;" data-url="{{ path('admin_v2_ai_apply', {feature: 'customer_service_bot'}) }}">AI客服机器人</a>
-    <a href="javascript:;" data-url="{{ path('admin_v2_ai_apply', {feature: 'study_assistant'}) }}">AI学习助手</a>
-    <a href="javascript:;" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'personal_test_paper'}) }}">AI个性卷</a>
-    <a href="javascript:;" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'question_marking'}) }}">AI主观题批阅</a>
-    <a href="javascript:;" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'teach_assistant'}) }}">AI助教</a>
-    <a href="javascript:;" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'marketing_poster'}) }}">AI营销海报</a>
-    <a href="javascript:;" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'workbench'}) }}">AI应用工具台</a>
+ {% block body %}
+     
+  <div class="ai-survey-body">
+    <div target="_blank" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'question_analysis'}) }}" class="ai-survey-content">        
+     <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <h5>3月</h5>
+          <p>2024</p>
+       </div>
+       <div class="ai-survey-content-left-text">
+        <span>完成 </span>
+        <span class="ai-middle-ground">“AI中台”</span>
+        <span> 建设</span>
+       </div>
+     </div>   
+    </div>
+    <div  data-url="{{ path('admin_v2_ai_like_feature', {feature: 'customer_service_bot'}) }}" class="ai-survey-content">
+     <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <h5>4月</h5>
+          <p>2024</p>
+       </div>
+       <div class="ai-survey-content-left-text">
+        <span class="ai-middle-ground">“自建算力中心”</span>
+        <span>验收上线</span>
+       </div>
+     </div>  
+    </div>
+    <a href="{{ path('admin_v2_question_ai_analysis') }}" data-url="{{ path('admin_v2_ai_like_feature', {feature: 'question_analysis'}) }}" class="ai-survey-content">
+      <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <h5>5月</h5>
+          <p>2024</p>
+       </div>
+       <div class="ai-survey-content-left-text">
+        <span class="ai-survey-content-center-btn">
+         <img src="{{ asset('static-dist/app/img/admin-v2/new-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
+        </span>
+        <span class="ai-middle-ground">“AI 题目解析”</span>
+        <span>如期而至！</span>
+       </div>
+      </div>
+     <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-experience">立即体验</button>
+     </div>
+    </a>
+    <div  data-url="{{ path('admin_v2_ai_apply', {feature: 'customer_service_bot'}) }}" class="ai-survey-content js-apply">
+      <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <h5>5月</h5>
+          <p>2024</p>
+       </div>
+       <div class="ai-survey-content-left-content">
+        <span class="ai-middle-ground">“AI 客服机器人”</span>
+        <span>体验中...</span>
+        <p>提供24小时在线咨询与解答服务，分析客户情绪和客户评价，通知人工介入</p>
+       </div>
+      </div> 
+     <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-try">我要试用</button>
+     </div>
+    </div>
+    <div  data-url="{{ path('admin_v2_ai_apply', {feature: 'study_assistant'}) }}" class="ai-survey-content js-apply">
+      <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <h5>5月</h5>
+          <p>2024</p>
+       </div>
+       <div class="ai-survey-content-left-content">
+        <span class="ai-middle-ground">“AI 学习助手”</span>
+        <span>体验中...</span>
+        <p>学员学习的今日头条 网校的百度知道，将知识切片推送给感兴趣的学员，利用碎片化时间随时随地学习</p>
+       </div>
+      </div> 
+     <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-try">我要试用</button>
+     </div>
+    </div>
+    <div  data-url="{{ path('admin_v2_ai_like_feature', {feature: 'personal_test_paper'}) }}" class="ai-survey-content js-like">
+     <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <h5>6月</h5>
+          <p>2024</p>
+       </div>
+       <div class="ai-survey-content-left-content">
+        <span class="ai-middle-ground">“AI 个性卷”</span>
+        <span>正在开发...</span>
+        <p>根据学员历史答题记录，动态识别知识掌握情况，强化练习弱项，提升学员知识掌握全面性</p>
+       </div>
+     </div> 
+     <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-collect">
+         <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
+         感兴趣
+       </button>
+     </div>
+    </div>
+    <div  data-url="{{ path('admin_v2_ai_like_feature', {feature: 'question_marking'}) }}" class="ai-survey-content js-like">
+     <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <h5>7月</h5>
+          <p>2024</p>
+       </div>
+       <div class="ai-survey-content-left-text">
+        <span class="ai-middle-ground">“AI 主观题批阅””</span>
+        <span>正在筹备....</span>
+       </div>
+     </div> 
+     <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-collect">
+         <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
+         感兴趣
+       </button>
+     </div>
+    </div>
+    <div  data-url="{{ path('admin_v2_ai_like_feature', {feature: 'teach_assistant'}) }}" class="ai-survey-content js-like">
+     <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <p>敬请期待</p>
+       </div>
+       <div class="ai-survey-content-left-text">
+        <span class="ai-middle-title">AI 助教”</span>
+       </div>
+     </div> 
+     <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-collect">
+         <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
+         感兴趣
+       </button>
+     </div>
+    </div>
+    <div  data-url="{{ path('admin_v2_ai_like_feature', {feature: 'marketing_poster'}) }}" class="ai-survey-content js-like">
+     <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <p>敬请期待</p>
+       </div>
+       <div class="ai-survey-content-left-text">
+        <span class="ai-middle-title">AI 营销海报</span>
+       </div>
+     </div> 
+     <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-collect">
+         <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
+         感兴趣
+       </button>
+     </div>
+    </div>
+    <div data-url="{{ path('admin_v2_ai_like_feature', {feature: 'workbench'}) }}" class="ai-survey-content js-like">
+      <div class="ai-survey-content-left">
+       <div class="ai-survey-content-left-date">
+          <p>敬请期待</p>
+       </div>
+       <div class="ai-survey-content-left-content">
+        <span class="ai-middle-title">AI 应用工具台</span>
+        <p>根据学员历史答题记录，动态识别知识掌握情况，强化练习弱项，提升学员知识掌握全面性</p>
+       </div>
+      </div> 
+      <div class="ai-survey-content-right">
+       <button class="ai-survey-content-right-collect">
+         <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image ">
+         感兴趣
+       </button>
+      </div>
+    </div>
   </div>
-{% endblock %}
+ {% endblock %}
 
 {% block footer %}
-  <a class="js-close-btn ai-survey-close-btn" href="javascript:;">{{ 'form.btn.close'|trans }}</a>
+   <a class="js-close-btn ai-survey-close-btn" href="javascript:;">{{ 'form.btn.close'|trans }}</a>
 {% endblock %}
