--- a/app/Resources/static-src/app/less/admin-v2/page/apply-modal.less
+++ b/app/Resources/static-src/app/less/admin-v2/page/apply-modal.less
@@ -1,164 +1,168 @@
+.ai-apply-modal {
+  width: 427px;
+  border-radius: 12px;
+
+  .modal-content {
+    border-radius: 12px;
+  }
+
+  .modal-body {
+    padding: 0 !important;
+  }
+
+  .modal-footer {
+    margin-top: 0 !important;
+  }
+}
+
 .apply-modal-header {
-    position: relative;
-    height: 76px;
-    border-radius: 4px;
-    background: linear-gradient(180deg, rgba(70, 195, 123, 0.30) 0%, rgba(255, 255, 255, 0.00) 110%), #FFF;
-    box-shadow: 0px 4px 20px 0px rgba(0, 82, 34, 0.02);
-    .apply-modal-close {
-        position: absolute;
-        top: 11px;
-        right: 13px;
+  padding: 32px 0 0 0;
+  position: relative;
+  height: 76px;
+  border-radius: 12px;
+  background: linear-gradient(180deg, rgba(70, 195, 123, 0.30) 0%, rgba(255, 255, 255, 0.00) 110%), #FFF;
+  box-shadow: 0 4px 20px 0 rgba(0, 82, 34, 0.02);
+
+  .apply-modal-close {
+    position: absolute;
+    top: 11px;
+    right: 13px;
+  }
+
+  .apply-modal-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .apply-modal-title-left {
+      width: 74px;
+      height: 2px;
+      background: linear-gradient(-90deg, #35C7AC 0%, rgba(255, 255, 255, 0.00) 118.24%);
     }
+
+    .apply-modal-center {
+      position: relative;
+      margin: 10px 5px;
+      color: #37393D;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 600;
+      line-height: 24px;
+    }
+
+    .apply-modal-title-right {
+      width: 74px;
+      height: 2px;
+      background: linear-gradient(90deg, #35C7AC 0%, rgba(255, 255, 255, 0.00) 118.24%);
+    }
+  }
 }
 
 .apply-modal-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    .apply-moda-title {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        .apply-moda-title-left {
-            width: 74px;
-            height: 2px;
-            background: linear-gradient(-90deg, #35C7AC 0%, rgba(255, 255, 255, 0.00) 118.24%);
-        }
-        .apply-moda-center {
-            position: relative;
-            margin: 10px 5px;
-            color: #37393D;
-            font-size: 24px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 24px;
-        }
-        .apply-moda-title-right {
-            width: 74px;
-            height: 2px;
-            background: linear-gradient(90deg, #35C7AC 0%, rgba(255, 255, 255, 0.00) 118.24%);
-        }
-    }
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 
-    .apply-moda-name {
-        margin-top: 44px;
-        margin-bottom: 5px;
-        padding: 6px;
-        padding-left: 27px;
-        width: 323px;
-        height: 34px;
-        border-radius: 6px;
-        border: 1px solid #F2F3F5;
-        background: #FFF;
-        background-image: url('/static-dist/app/img/admin-v2/apply-modeal-user-line.png');
-        background-size: 16px;
-        background-position: 7px 8px;
-        background-repeat: no-repeat;
-    }
 
-    .apply-moda-mobile {
-        margin-top: 16px;
-        margin-bottom: 5px;
-        padding: 6px;
-        padding-left: 27px;
-        width: 323px;
-        height: 34px;
-        border-radius: 6px;
-        border: 1px solid #F2F3F5;
-        background: #FFF;
-        background-image: url('/static-dist/app/img/admin-v2/apply-modeal-smartphone-line.png');
-        background-size: 16px;
-        background-position: 7px 8px;
-        background-repeat: no-repeat;
-    }
+  .apply-modal-name {
+    margin-top: 44px;
+    padding: 6px;
+    padding-left: 27px;
+    width: 323px;
+    height: 34px;
+    border-radius: 6px;
+    border: 1px solid #F2F3F5;
+    background: #FFF;
+    background-image: url('/static-dist/app/img/admin-v2/apply-modeal-user-line.png');
+    background-size: 16px;
+    background-position: 7px 8px;
+    background-repeat: no-repeat;
+  }
 
-    .apply-moda-apply {
-        margin-top: 42px;
-        margin-bottom: 5px;
-        padding: 6.4px 15px;
-        width: 120px;
-        height: 40px;
-        border-radius: 4px;
-        border: 1px solid #46C37B;
-        background: #46C37B;
-        color: #FFF;
-        text-align: center;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 24px;
-    }
+  .apply-modal-mobile {
+    margin-top: 16px;
+    padding: 6px;
+    padding-left: 27px;
+    width: 323px;
+    height: 34px;
+    border-radius: 6px;
+    border: 1px solid #F2F3F5;
+    background: #FFF;
+    background-image: url('/static-dist/app/img/admin-v2/apply-modeal-smartphone-line.png');
+    background-size: 16px;
+    background-position: 7px 8px;
+    background-repeat: no-repeat;
+  }
 
-    .name-tips {
-        display: none;
-        margin: 0;
-        margin-left: -5px;
-        width: 262px;
-        color: red;
-        font-size: 12px;
-        text-align: left;
+  .apply-modal-apply {
+    margin-top: 48px;
+    padding: 6.4px 15px;
+    width: 120px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #46C37B;
+    background: #46C37B;
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
 
-    }
-
-    .mobile-tips {
-        display: none;
-        margin: 0;
-        margin-left: -5px;
-        width: 262px;
-        color: red;
-        font-size: 12px;
-        text-align: left;
-    }
 }
 
 .apply-success {
-    display: none;
+  display: none;
 
-    .apply-success-title {
-        color: #37393D;
-        font-size: 24px;
-        font-style: normal;
-        font-weight: 600;
-        line-height: normal;
-        text-align: center;
-    }
+  .apply-success-title {
+    color: #37393D;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-align: center;
+  }
+
+  .apply-success-text-wrap {
+    padding: 0 53px;
 
     .apply-success-text {
-        color: #5E6166;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 26px;
+      color: #5E6166;
+      font-size: 16px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 26px;
+    }
+  }
+
+  .apply-modal-btn {
+    margin: 48px auto 0;
+    padding: 6.4px 15px;
+    width: 120px;
+    height: 40px;
+    border-radius: 4px;
+    border: 1px solid #46C37B;
+    background: #46C37B;
+    color: #FFF;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
+  .apply-success-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 44px;
+
+    img {
+      width: 96px;
+      height: 96px;
     }
 
-    .apply-moda-btn {
-        margin: 0 auto;
-        margin-top: 42px;
-        padding: 6.4px 15px;
-        width: 120px;
-        height: 40px;
-        border-radius: 4px;
-        border: 1px solid #46C37B;
-        background: #46C37B;
-        color: #FFF;
-        text-align: center;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 24px;
-    }
-
-    .apply-success-img {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 44px;
-
-        img {
-            width: 96px;
-            height: 96px;
-        }
-
-    }
+  }
 }
