--- a/app/Resources/static-src/app/less/admin-v2/page/survey-modal.less
+++ b/app/Resources/static-src/app/less/admin-v2/page/survey-modal.less
@@ -221,12 +221,12 @@
         color: #46C37B;
         vertical-align: middle;
         line-height: 16px;
-      }
-
-      .ai-survey-content-center-btn-image {
-        width: 16px;
-        height: 16px;
-      }
+        .ai-survey-content-center-btn-image {
+          margin-top: -4px;
+          width: 16px;
+          height: 16px;
+        }
+      }   
     }
   }
 
