--- a/app/Resources/views/admin-v2/ai/survey-modal.html.twig
+++ b/app/Resources/views/admin-v2/ai/survey-modal.html.twig
@@ -109,7 +109,7 @@
        <div class="ai-survey-content-right">
          <button class="ai-survey-content-right-collect">
            <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
-           感兴趣
+           <span>感兴趣</span>
          </button>
        </div>
      </div>
@@ -120,14 +120,14 @@
            <p>2024</p>
          </div>
          <div class="ai-survey-content-left-text">
-           <span class="ai-middle-ground">“AI 主观题批阅””</span>
+           <span class="ai-middle-ground">“AI 主观题批阅”</span>
            <span>正在筹备....</span>
          </div>
        </div>
        <div class="ai-survey-content-right">
          <button class="ai-survey-content-right-collect">
            <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
-           感兴趣
+           <span>感兴趣</span>
          </button>
        </div>
      </div>
@@ -143,7 +143,7 @@
        <div class="ai-survey-content-right">
          <button class="ai-survey-content-right-collect">
            <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
-           感兴趣
+           <span>感兴趣</span>
          </button>
        </div>
      </div>
@@ -159,7 +159,7 @@
        <div class="ai-survey-content-right">
          <button class="ai-survey-content-right-collect">
            <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
-           感兴趣
+           <span>感兴趣</span>
          </button>
        </div>
      </div>
@@ -176,7 +176,7 @@
        <div class="ai-survey-content-right">
          <button class="ai-survey-content-right-collect">
            <img src="{{ asset('static-dist/app/img/admin-v2/collect-img.png') }}" alt="" class="ai-survey-content-center-btn-image ">
-           感兴趣
+           <span>感兴趣</span>
          </button>
        </div>
      </div>
