--- a/app/Resources/static-src/app/less/admin-v2/container.less
+++ b/app/Resources/static-src/app/less/admin-v2/container.less
@@ -1,4 +1,3 @@
-
 .admin-v2-page {
   line-height: 22px;
 
@@ -11,6 +10,7 @@
   @media (min-width: 1400px) {
     width: 1380px;
   }
+
   padding-right: 12px;
   padding-left: 12px;
 
@@ -24,10 +24,12 @@
   margin: 14px 0;
   padding-left: 16px;
   padding-right: 16px;
+
   @media (min-width: 1400px) {
     padding-left: 24px;
     padding-right: 24px;
   }
+
   background-color: #fff7ef;
 
   .alert {
@@ -84,9 +86,26 @@
   background: #E8F3FF;
 
   .ai-notice-left {
+    .ai-notice-left-image {
+      margin-top: -3px;
+      margin-right: 10px;
+      width: 14px;
+      height: 14px;
+    }
   }
 
   .ai-notice-right {
+    .ai-notice-btn {
+      margin-right: 10px;
+      padding: 2px 12px;
+      width: 52px;
+      height: 22px;
+      line-height: 22px;
+      font-size: 14px;
+      color: #165DFF;
+      border-radius: 4px;
+      border: 0.5px solid #165DFF;
+    }
   }
 }
 
@@ -94,6 +113,7 @@
   margin-bottom: 16px;
   padding: 20px;
   border-radius: 8px;
+
   @media (min-width: 1400px) {
     padding-left: 20px;
     padding-right: 20px;
@@ -182,10 +202,12 @@
 .task-step {
   position: relative;
   padding: 24px 4px 16px 4px;
+
   @media (min-width: 1400px) {
     padding-left: 14px;
     padding-right: 14px;
   }
+
   text-align: center;
   border-radius: 4px;
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.05);
@@ -431,6 +453,7 @@
   margin-left: 4px;
   padding: 16px;
   text-align: left;
+
   @media (min-width: 1400px) {
     margin-left: 24px;
   }
@@ -520,12 +543,15 @@
 
 .admin-info-section {
   border-radius: 8px;
+
   @media (min-width: 1400px) {
     padding: 20px;
   }
+
   @media (max-width: 1400px) {
     padding: 5px;
   }
+
   background-color: @cdv2-white;
 }
 
@@ -635,9 +661,11 @@
 .admin-update {
   margin-top: 16px;
   margin-bottom: 16px;
+
   @media (min-width: 1400px) {
     padding: 12px;
   }
+
   padding: 12px 30px 12px 14px;
   background-color: #FAFAFA;
   text-align: center;
@@ -710,9 +738,11 @@
 .admin-link {
   @media (min-width: 1400px) {
     display: grid;
-    grid-template-columns: repeat(3, 1fr); /* 将容器分为三列，每列的宽度平均分配 */
+    grid-template-columns: repeat(3, 1fr);
+    /* 将容器分为三列，每列的宽度平均分配 */
     grid-gap: 12px;
   }
+
   @media (max-width: 1400px) {
     display: flex;
     justify-content: space-between;
@@ -802,9 +832,11 @@
   border-radius: 8px;
   margin-top: 16px;
   background-color: @cdv2-white;
+
   @media (min-width: 1400px) {
     padding: 20px;
   }
+
   @media (max-width: 1400px) {
     padding: 5px;
   }
@@ -985,7 +1017,7 @@
   border: none;
   border-radius: 4px;
 
-  &.bottom > .arrow {
+  &.bottom>.arrow {
     border-bottom-color: rgba(0, 0, 0, .05);
   }
 
@@ -1050,4 +1082,3 @@
     }
   }
 }
-
