--- a/app/Resources/views/admin-v2/ai/apply-modal.html.twig
+++ b/app/Resources/views/admin-v2/ai/apply-modal.html.twig
@@ -20,10 +20,12 @@
 {% block body %}
   <form id="apply-form" action="{{ path('admin_v2_ai_like_feature') }}" class="apply-modal-form">
     <div class="controls">
+      <img src="{{ asset('static-dist/app/img/admin-v2/apply-modeal-user-line.png') }}" alt="" class="apply-modal-name-image">
       <input type="text" name="name" value="{{ name }}" class="apply-modal-name" placeholder="请输入姓名"/>
       <div class="help-block" style="display:none;"></div>
     </div>
     <div class="controls">
+      <img src="{{ asset('static-dist/app/img/admin-v2/apply-modeal-smartphone-line.png') }}" alt="" class="apply-modal-mobile-image">
       <input type="text" name="mobile" value="{{ mobile }}" class="apply-modal-mobile" placeholder="请输入手机号"/>
       <div class="help-block" style="display:none;"></div>
     </div>
@@ -34,7 +36,11 @@
     <span class="apply-success-img">
       <img src="{{ asset('static-dist/app/img/admin-v2/success-img.png') }}" alt="">
     </span>
-    <h3 class="apply-success-title">提交申请成功</h3>
+    <div class="apply-success-title">
+      <span class="apply-success-title-left"></span>
+      <span class="apply-success-title-center">提交申请成功</span>
+      <span class="apply-success-title-right"></span>
+    </div>
     <div class="apply-success-text-wrap">
       <p class="apply-success-text">在此期间，请保持您所提供的联系方式畅通。我们将尽快与您取得联系，以便进一步讨论您的需求或提供相关帮助。</p>
     </div>
