--- a/app/Resources/views/admin-v2/default/index.html.twig
+++ b/app/Resources/views/admin-v2/default/index.html.twig
@@ -10,9 +10,14 @@
   <div class="container admin-v2-container">
     <div class="ai-notice js-ai-notice">
       <div class="ai-notice-left">
+        <img src="{{ asset('static-dist/app/img/admin-v2/ai-notice-img.png') }}" alt="" class="ai-notice-left-image">
         <span>{{ 'EduSoho 全面融合 AI ，赋能在线教育 —— 限时免费体验，开启智慧教学新时代！' }}</span>
       </div>
       <div class="ai-notice-right">
+        <span class="ai-notice-btn">立即查看</span>
+        <button type="button" class="close js-ai-notice-close" >
+          <i class="cd-icon cd-icon-close"></i>
+        </button>
       </div>
     </div>
     {# S2B2C 通知提示 #}
