feat: #240606 ai调查问卷弹窗样式的修改

--- a/app/Resources/static-src/app/less/admin-v2/container.less
+++ b/app/Resources/static-src/app/less/admin-v2/container.less
@@ -76,6 +76,7 @@
 }
 
 .ai-notice {
+  cursor: pointer;
   display: flex;
   justify-content: space-between;
   margin: 10px auto;
@@ -108,7 +109,6 @@
     }
   }
 }
-
 .admin-v2-section {
   margin-bottom: 16px;
   padding: 20px;
