--- a/app/Resources/views/admin-v2/ai/survey-modal.html.twig
+++ b/app/Resources/views/admin-v2/ai/survey-modal.html.twig
@@ -51,9 +51,9 @@
            <p>2024</p>
          </div>
          <div class="ai-survey-content-left-text">
-        <span class="ai-survey-content-center-btn">
-         <img src="{{ asset('static-dist/app/img/admin-v2/new-img.png') }}" alt="" class="ai-survey-content-center-btn-image">
-        </span>
+         <span class="ai-survey-content-center-btn">
+          NEW
+         </span>
            <span class="ai-middle-ground">“AI 题目解析”</span>
            <span>如期而至！</span>
          </div>
@@ -87,7 +87,7 @@
          <div class="ai-survey-content-left-content">
            <span class="ai-middle-ground">“AI 学习助手”</span>
            <span>体验中...</span>
-           <p>学员学习的今日头条 网校的百度知道，将知识切片推送给感兴趣的学员，利用碎片化时间随时随地学习</p>
+           <p>学员学习的今日头条，网校的百度知道，将知识切片推送给感兴趣的学员，利用碎片化时间随时随地学习</p>
          </div>
        </div>
        <div class="ai-survey-content-right">
