--- a/app/Resources/static-src/app/less/admin-v2/page/survey-modal.less
+++ b/app/Resources/static-src/app/less/admin-v2/page/survey-modal.less
@@ -4,9 +4,14 @@
 
   .modal-content {
     border-radius: 16px !important;
-
+    border: none;
     .modal-body {
       padding: 0 !important;
+    }
+    .modal-footer {
+      margin-top: 0;
+      padding: 16px;
+      border-top: 1px solid #EFF0F5;
     }
   }
 }
@@ -79,14 +84,15 @@
 
       .ai-survey-content-left-date {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 29px;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        width: 29px; 
+        text-align: center;
 
         h5 {
           margin: 0;
+          font-size: 16px;
           font-style: normal;
           font-weight: 500;
           line-height: 24px;
@@ -108,12 +114,17 @@
         margin-left: 32px;
         display: flex;
         align-items: center;
-
+        font-size: 16px;
         span {
-          margin: 5px;
+          margin: 0 5px;
+          display: inline-block;
+          line-height: 24px;
         }
 
-        .ai-middle-ground {
+        .ai-middle-ground { 
+          margin: 0; 
+          display: inline-block;
+          line-height: 24px;
           color: #46C37B;
         }
 
@@ -125,40 +136,43 @@
         }
 
         .ai-survey-content-center-btn {
+          margin: 0;
+          margin-right: 5px;
           display: flex;
           justify-content: center;
           align-items: center;
           padding: 6px;
           height: 20px;
+          color: #fff;
+          font-size: 12px;
           line-height: 20px;
           border-radius: 4px;
           background: #46C37B;
           text-align: center;
         }
-
         p {
           color: #919399;
           font-size: 12px;
           font-style: normal;
           font-weight: 400;
           line-height: 20px;
-        }
-
-        .ai-survey-content-center-btn-image {
-          width: 20px;
-          height: 11px;
-        }
+        }      
       }
 
       .ai-survey-content-left-content {
         margin-left: 32px;
-
+       font-size: 16px;
         span {
-          margin: 5px;
+          margin: 0 5px;
+          display: inline-block;
+          line-height: 24px;
         }
 
         .ai-middle-ground {
+          margin: 0;
           color: #46C37B;
+          display: inline-block;
+          line-height: 24px;
         }
 
         .ai-middle-title {
@@ -169,6 +183,7 @@
         }
 
         .ai-survey-content-center-btn {
+          margin: 0;
           width: 32px;
           height: 20px;
           line-height: 20px;
