feat: #240606 ai调查问卷弹窗文字修改

--- a/app/Resources/static-src/app/less/admin-v2/page/survey-modal.less
+++ b/app/Resources/static-src/app/less/admin-v2/page/survey-modal.less
@@ -38,7 +38,7 @@
     background-repeat: no-repeat;
 
     .ai-survey-title-image {
-      margin-left: 24px;
+      margin-left: 30px;
       width: 100px;
       height: 16px;
     }
@@ -80,7 +80,7 @@
 
     .ai-survey-content-left {
       display: flex;
-      margin-right: 10px;
+      margin-right: 40px;
 
       .ai-survey-content-left-date {
         display: flex;
@@ -129,6 +129,7 @@
         }
 
         .ai-middle-title {
+          margin: 0;
           color: #37393D;
           font-size: 16px;
           font-weight: 500;
@@ -176,6 +177,7 @@
         }
 
         .ai-middle-title {
+          margin: 0;
           color: #37393D;
           font-size: 16px;
           font-weight: 500;
