--- a/app/Resources/views/admin-v2/ai/survey-modal.html.twig
+++ b/app/Resources/views/admin-v2/ai/survey-modal.html.twig
@@ -170,7 +170,7 @@
          </div>
          <div class="ai-survey-content-left-content">
            <span class="ai-middle-title">AI 应用工具台</span>
-           <p>根据学员历史答题记录，动态识别知识掌握情况，强化练习弱项，提升学员知识掌握全面性</p>
+           <p>AI营销文案、视频脚本、PPT大纲等超多应用类型满足各种教学营销场景，为网校运营全流程赋能，全力帮助网校降本增效</p>
          </div>
        </div>
        <div class="ai-survey-content-right">
