feat: #104800 创建随机卷管理页按钮tab和创建试卷弹窗

--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -185,3 +185,5 @@
 @import "page/teaching.less";
 @import "page/testpaper-score.less";
 @import 'page/class/class-detail-main-color.less';
+@import 'page/question-bank/testpaper-list-title.less';
+@import 'page/question-bank/testpaper-create-model.less';
