feat: #104810 创建随机卷-题型展示设置下拉菜单

--- a/app/Resources/static-src/app/less/page/question-bank/list.less
+++ b/app/Resources/static-src/app/less/page/question-bank/list.less
@@ -256,3 +256,17 @@
     line-height: 22px; 
   }
 }
+
+.test-paper-container {
+  background-color: white;
+
+  .test-paper-list-container {
+    display: flex;
+    padding: 32px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+    flex: 1 0 0;
+    align-self: stretch;
+  }
+}
