--- a/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
+++ b/app/Resources/static-src/app/less/page/question-bank/testpaper-list-title.less
@@ -1,80 +1,87 @@
-.testpaper-title {
+.test-paper-list-container {
+  .test-paper-list-header {
     display: flex;
     justify-content: space-between;
-    padding: 0 25px;
-    float: none;
-    width: 100% !important;
-    font-size: 16px;
-    font-weight: normal;
+    align-items: flex-start;
+    align-self: stretch;
 
     .testpaper-title-left {
+      display: flex;
+      padding: 2px;
+      align-items: center;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+      background: rgba(0, 0, 0, 0.06);
+      color: rgba(0, 0, 0, 0.65);
+      border-radius: 2px;
+
+      span {
         display: flex;
-        padding: 2px;
+        padding: 3px 11px;
         align-items: center;
+
+        img {
+          margin: -2px 5px 0 0;
+          width: 17px;
+          height: 12px;
+        }
+      }
+
+      .active {
+        border-radius: 2px;
+        background: #FFF;
+        box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.05);
+      }
+    }
+
+    .testpaper-title-right {
+      display: flex;
+      align-items: flex-start;
+      gap: 20px;
+
+      .testpaper-title-right-create {
+        display: flex;
+        padding: 4px 15px;
+        justify-content: center;
+        align-items: center;
+        gap: 8px;
+
+        border-radius: 2px;
+        border: 1px solid var(--PC, #46C37B);
+        background: var(--PC, #46C37B);
+        box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.04);
+
+        color: var(---, #FFF);
+        text-align: center;
+        font-family: "PingFang SC";
         font-size: 14px;
         font-style: normal;
         font-weight: 400;
         line-height: 22px;
-        background: rgba(0, 0, 0, 0.06);
-        color: rgba(0, 0, 0, 0.65);
-        border-radius: 2px;
-        span {
-            display: flex;
-            padding: 3px 11px;
-            align-items: center;
-            img {
-                margin: -2px 5px 0 0;
-                width: 17px;
-                height: 12px;
-            }
-        }
+      }
 
-        .active {
-            border-radius: 2px;
-            background: #FFF;
-            box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.05);
-        }
-    }
-
-    .testpaper-title-right {
+      .testpaper-title-right-import {
         display: flex;
-        align-items: flex-start;
+        padding: 4px 15px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
 
-        .testpaper-title-right-create {
-            display: flex;
-            padding: 4px 15px;
-            justify-content: center;
-            align-items: center;
-            height: 32px;
-            text-align: center;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 22px;
-            border-radius: 2px;
-            border: 1px solid #46C37B;
-            color: #FFF;
-            background: #46C37B;
-            box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.04);
-        }
+        border-radius: 2px;
+        border: 1px solid var(--PC, #46C37B);
+        background: var(--Neutral-1, #FFF);
+        box-shadow: 0 2px 0 0 rgba(0, 0, 0, 0.02);
 
-        .testpaper-title-right-import {
-            display: flex;
-            padding: 4px 15px;
-            margin-left: 20px;
-            justify-content: center;
-            align-items: center;
-            height: 32px;
-            border-radius: 2px;
-            border: 1px solid #46C37B;
-            background: #FFF;
-            box-shadow: 0px 2px 0px 0px rgba(0, 0, 0, 0.02);
-            color: #46C37B;
-            text-align: center;
-            font-size: 14px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 22px;
-        }
+        color: var(--PC, #46C37B);
+        text-align: center;
+        font-family: "PingFang SC";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 22px;
+      }
     }
+  }
 }
